<resources>
    <string name="app_name">MyDinoStickersCollection2</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="usuario">Usuario</string>
    <string name="categorias">categorias</string>
    <string name="id">id</string>
    <string name="categorias1">Categorias</string>
    <string name="login">Login</string>
    <string name="login_description">Ingrese nombre de usuario y contraseña para administrar su album de figuritas.</string>
    <string name="user_input_name">Nombre de usuario</string>
    <string name="constrasenia">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="tu_carrito">Tu carrito</string>
    <string name="elegi_una_cantidad">Elegí una cantidad</string>
    <string name="eleg_un_medio_de_pago">Elegí un medio de pago</string>
    <string name="sobre_de_5_figuritas_por_pack">Sobre de 5 figuritas por pack</string>
    <string name="_1_000">$1.000</string>
    <string name="descripcion">Descripcion</string>
    <string name="items">Items</string>
    <string name="comprar_ahora">Comprar ahora</string>
    <string name="oops">¡OOPS!</string>
    <string name="lo_sentimos_no_se_pudo_realizar_su_compra_por_saldo_insuficiente_ingrese_dinero_a_su_cuenta_e_intente_otra_vez">Lo sentimos, no se pudo realizar su compra por saldo insuficiente. Ingrese dinero a su cuenta e intente otra vez.</string>
    <string name="volver_a_mi_inicio">Volver a mi inicio</string>
    <string name="imagen_redondeada_de_una_x_al_mostrar_una_falla">Imagen redondeada de una x al mostrar una falla</string>
    <string name="pago_exitoso">Pago Exitoso</string>
    <string name="su_compra_se_realizo_exitosamente_se_acaban_de_agregar_nuevas_figuritas_a_tu_colecci_n_volv_a_la_pantalla_principal_y_descubrilas">Su compra se realizo exitosamente. Se acaban de agregar nuevas figuritas a tu colección ¡Volvé a la pantalla principal y descubrilas!</string>
    <string name="subtotal">Subtotal</string>
    <string name="comisi_n">Comisión</string>
    <string name="total">Total</string>
    <string name="imagen_seleccionada_medio_de_pago_visa">Imagen seleccionada, medio de pago visa</string>
    <string name="imagen_seleccionada_medio_de_pago_mercado_pago">Imagen seleccionada, medio de pago mercado pago</string>
    <string name="imagen_seleccionada_mastercard">Imagen seleccionada, mastercard</string>
    <string name="sobres_de_stickers">Sobres de stickers</string>
    <string name="descripcion_user">USER011, ¡Solo te faltan 4 stickers para completar tu colección!\nColeccionadas: 24 \nRepetidas: 6</string>
    <string name="allosaurus_description">Allosaurus es un gran terópodo pico, con un cráneo grande y un cuello corto, una cola larga y miembros superiores reducidos.</string>
    <string name="velociraptor_description">Velociraptor es un carnívoro bípedo, con una cola larga y rígida, y unas garras grandes con forma de hoz en cada pata, que probablemente le facilitaba el matar a sus presas.</string>
    <string name="fondo_del_sticker_en_un_verde_degradado">Fondo del sticker en un verde degradado</string>
    <string name="tu_colecci_n">Tu colección</string>
    <string name="dinero_disponible">Dinero disponible</string>
</resources>