<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_green"
    tools:context=".SuccessActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="788dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#F3F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="730dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="90dp"
                android:layout_width="256dp"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/img_success"
                android:contentDescription="@string/imagen_redondeada_de_una_x_al_mostrar_una_falla"
                />

            <TextView
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:text="@string/pago_exitoso"
                android:textSize="30sp"
                android:fontFamily="@font/afacad_bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="284dp"
                android:layout_height="130dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:gravity="center"
                android:text="@string/su_compra_se_realizo_exitosamente_se_acaban_de_agregar_nuevas_figuritas_a_tu_colecci_n_volv_a_la_pantalla_principal_y_descubrilas"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVolverInicio"
                android:layout_width="295dp"
                android:layout_height="72dp"
                android:background="@drawable/button_bkg"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/volver_a_mi_inicio"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"

                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>