<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_green"
    tools:context=".PurchaseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/items"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_items"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_user_items"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_user_subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:text="4" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/subtotal"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView14"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_subtotal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_user_subtotal"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_user_comision"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                tools:text="40.000.0" />

            <TextView
                android:id="@+id/tv_user_comision"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text ="40.0"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/comisi_n"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_comision"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/ic_dotted_line"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/afacad_bold"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_buy_now"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_total"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_user_total"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text ="40.040.0"
                app:layout_constraintBottom_toTopOf="@+id/btn_buy_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_buy_now"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bkg"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/comprar_ahora"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:background="@drawable/img_backstack"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="184dp"
        android:fontFamily="@font/afacad_bold"
        android:text="@string/tu_cariito"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.358"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/afacad_bold"
        android:text="@string/elegi_una_cantidad"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="123dp"
                android:layout_height="115dp"
                android:contentDescription="@string/sobres_de_stickers"
                android:background="@drawable/img_stickers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="171dp"
                android:layout_height="57dp"
                android:fontFamily="@font/afacad_variablefont_wght"
                android:text="@string/sobre_de_5_figuritas_por_pack"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:fontFamily="@font/afacad_bold"
                android:text="@string/_1_500_0"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/imageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/img_minus_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_count_stickerpack"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/img_white_number_bkg"
                android:fontFamily="@font/afacad_bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="10" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/img_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.781"
                app:layout_constraintStart_toEndOf="@+id/tv_count_stickerpack"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.714"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="245dp"
        android:layout_height="38dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/afacad_bold"
        android:text="@string/eleg_un_medio_de_pago"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageButton
                android:id="@+id/btn_mastercard"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:contentDescription="@string/imagen_seleccionada_mastercard"
                android:background="@drawable/img_mastercard"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_mercadopago"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imagen_seleccionada_medio_de_pago_mercado_pago"
                android:background="@drawable/img_mercadopago"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_visa"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:contentDescription="@string/imagen_seleccionada_medio_de_pago_visa"
                android:background="@drawable/img_visa"
                tools:ignore="SpeakableTextPresentCheck" />
            
        </LinearLayout>
        
        
        
        
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/afacad_bold"
        android:text="@string/descripcion"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.044893377" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07055961" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="382dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="53dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>